# problem-interpretation

./: .env.example  .gitignore  AGENTS.md  BACKLOG.md  CLAUDE.md  README.md  coding_guidelines.md  mlruns.db  output.txt  pyproject.toml  requirements.txt
.claude/: settings.json  settings.local.json
.claude/agent-memory/code-reviewer/: MEMORY.md  project_architecture.md
.claude/agents/: code-reviewer.md  security-reviewer.md  test-writer.md
app/: __init__.py  config.py  main.py
app/api/: __init__.py
app/api/routes/: __init__.py  health.py  translation.py
app/api/schemas/: __init__.py  translation.py
app/config/: __init__.py  rules.py  settings.py
app/core/: __init__.py  logging.py  orchestrator.py  state.py
app/engines/: __init__.py  base.py
app/engines/combase/: __init__.py  calculator.py  engine.py  models.py
app/models/: enums.py  extraction.py  metadata.py
app/models/execution/: __init__.py  base.py  combase.py
app/rag/: __init__.py  embeddings.py  evaluation.py  experiments.py  ingestion.py  reranker.py  retrieval.py  vector_store.py
app/rag/data_sources/: __init__.py  citations.py  food_safety.py
app/rag/loaders/: __init__.py  base.py  csv_loader.py  docx_loader.py  pdf_loader.py  text.py
app/services/audit/: citations.py  system.py
app/services/extraction/: __init__.py  semantic_parser.py
app/services/grounding/: __init__.py  grounding_service.py
app/services/llm/: __init__.py  client.py
app/services/standardization/: __init__.py  standardization_service.py
benchmarks/: README.md  __init__.py  common.py  config.py
benchmarks/datasets/: extraction_queries.json  ph_aw_foods.json
benchmarks/experiments/: __init__.py  exp_1_1_ph_stochasticity.py  exp_3_3_model_comparison.py
benchmarks/results/exp_1_1_ph_stochasticity/: latest.csv  latest.json
benchmarks/results/exp_3_3_model_comparison/: latest.csv  latest.json  summary_20260410_113632.csv
benchmarks/visualizations/: app.py
benchmarks/visualizations/pages/: 1_overview.py  (+3 more)
cli/: rag_admin.py
data/: combase_models.csv
data/rag/: README.md  food_pathogen_hazards.csv  food_properties.csv  pathogen_aw_limits.csv  pathogen_characteristics.csv  pathogen_food_associations.csv  pathogen_transmission_details.csv  rag_audit_changelog.md  tcs_classification_tables.csv
data/sources/: extraction_notes.md  extraction_notes_updated.md  sources.md  summary_of_sources.txt
docs/: Cosas_pendientes.md  grounding_service_architecture_expanded.md  grounding_service_documentation.md  ideas.md  issues.md  model_type_aware_conservative_bias.md  problem_translation_module_complete_techincal_documentation.md  ptm_context.md  rag_data_sources_architecture.md  rag_system.md  sensitivity_analysis_queries.md  source_references_appendix.md
scripts/: test_combase_calculator.py  test_combase_engine.py  test_full_pipeline.py  test_llm_client.py  test_llm_manual.py  test_llm_manual_advanced.py  test_multistep_pipeline.py  test_orchestrator.py  test_rag_evaluation.py  test_rag_retrieval.py  test_semantic_parser.py  test_translate.py
specs/: SPEC_exp_1_1_ph_stochasticity.md  claude_code_prompt_specifications.md  lessons.md  specifications.md  specifications_context.md  visualization_specs.md
tasks/: lessons.md  todo_exp_1_1_ph_stochasticity.md  todo_visualizations.md
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_api.py  test_full_pipeline.py
tests/unit/: __init__.py  test_api_translation.py  test_combase_calculator.py  test_combase_engine.py  test_combase_models.py  test_config.py  test_enums.py  test_execution.py  test_extraction.py  test_grounding_service.py  test_health.py  test_ingestion.py  test_llm_client.py  test_loaders.py  test_metadata.py  test_model_type_aware_bias.py  test_multistep_grounding.py  test_orchestrator.py  test_rules.py  test_semantic_parser.py  test_vector_store.py  test_viz_charts.py  test_viz_data_loader.py  test_viz_experiment_runner.py  test_viz_model_comparison.py  test_viz_overview.py  test_viz_ph_stochasticity.py  test_viz_runner_page.py
(+3 files in other folders)
